# Enhanced-NPC-Autonomous

./: .gitignore  EnhancedNPCAutonomous.uplugin  INTEGRATION_GUIDE.txt  README.md  README.txt  activate_ai.py  install.py  mkdocs.yml  plugin_loader.py  pytest.ini  requirements.txt  run_tests.bat  run_tests.py  setup.py  test_in_game.py
Source/: EnhancedNPCAutonomous.Build.cs
config/: ena_config.json  npc_personalities.json  player_control.json  species_behaviors.json
data/: npc_templates.json  npcs.json
docs/: integration_guide.md  vortex_installation_guide.md
ena/: __init__.py  __main__.py
examples/: demo_enhanced_world.py  microphone_example.py
scripts/: check_system.py  download_models.py  setup_environment.py  start_with_vortex.py
src/: api.py  main.py  (+2 more)
src/scripthook_mod/: CMakeLists.txt  alliance_system.cpp  alliance_system.h  collective_memory.cpp  collective_memory.h  environment_interaction.cpp  environment_interaction.h  environmental_system.cpp  environmental_system.h  event_manager.cpp  event_manager.h  event_system.cpp  event_system.h  family_relations.cpp  family_relations.h  group_learning.cpp  group_learning.h  group_rituals.cpp  group_rituals.h  main.cpp  memory_manager.cpp  memory_manager.h  migration_system.cpp  migration_system.h  negotiation_system.cpp  negotiation_system.h  npc_controller.cpp  npc_controller.h  npc_state.cpp  npc_state.h  personality_system.cpp  personality_system.h  reputation_system.cpp  reputation_system.h  routine_system.cpp  routine_system.h  script.cpp  seasonal_events.cpp  seasonal_events.h  social_events.cpp  (+9 more)
(+79 files in other folders)
